--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "lab_collection",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Eleventy site configured for GitHub Pages (Windows CMD)",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx @11ty/eleventy --serve" 
+    "clean": "if exist docs rmdir /s /q docs & if exist _site rmdir /s /q _site",
+    "build": "npm run clean && cross-env ELEVENTY_ENV=production npx @11ty/eleventy",
+    "serve": "npx @11ty/eleventy --serve"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "@11ty/eleventy": "^3.1.2"
+    "@11ty/eleventy": "^2.0.0",
+    "cross-env": "^7.0.3",
+    "luxon": "^3.0.0"
   }
 }
